# nvidia-doc-agent

./: .env.example  .gitignore  CLEANUP_SUMMARY.md  CODE_CLEANUP_SUMMARY.md  DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE  README.md  README_OLD.md  TEST_REPORT.md  deploy_linux.sh  docker-compose.yml  ingest.sh  migrate_vector_db.py  pyproject.toml  requirements.txt  run_ingest.py  run_ingestion.py  run_production_ingestion.py  setup.sh  setup_mac.sh  showcase.py  test_embeddings.py  test_rag_system.py
docs/: README.md
rag/: cli.py  config.py  embeddings.py  main.py
rag/agent/: controller.py  tools.py
rag/agent/prompts/: system.txt
rag/agent/prompts/user_examples/: README.md
rag/evaluation/: metrics.py
rag/pipeline/: embed.py  index.py  ingest.py  retrieve.py
rag/scrapers/: nvidia_docs.py
tests/: test_agent.py  test_pipeline.py
